Added version endpoint
